<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imagem"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/evagas2" />

        <EditText
            android:id="@+id/nomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imagem"
            android:hint="@string/nome"
            android:inputType="text"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/sobrenomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nomeText"
            android:hint="@string/sobrenome"
            android:inputType="text"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sobrenomeText"
            android:layout_marginTop="22dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/senhaText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailText"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/confirmarSenhaText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/senhaText"
            android:hint="@string/confirmarSenha"
            android:inputType="textPassword"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:background="@color/colorAzulClaro"
            android:onClick="mensagenExibir"
            android:text="@string/cadastrar"
            android:textSize="22sp"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>