<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/cadastroText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastroVaga"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/nomeVaga"
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:hint="@string/nomeVaga"
            android:inputType="text"
            android:textSize="25sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/localVaga"
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:hint="@string/localVaga"
            android:inputType="text"
            android:textSize="25sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/descricaoVaga"
            android:layout_width="385dp"
            android:layout_height="300dp"
            android:hint="@string/descricaoVaga"
            android:inputType="text"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:gravity="start" />
    </LinearLayout>
</LinearLayout>